# StoreMart

./: CMakeLists.txt  README.md
docs/: Configure_CMake.md
inc/: Book.h  Clothing.h  Electronic.h  Product.h
src/: main.cpp
